# netdrop

./: .gitignore  CMakeLists.txt  README.md  config_netboard.sample  config_netdrop.sample  sshdrop
client/: client.pl  netdrop  netdrop-client  send.pl  simon
integration/: CMakeLists.txt  README.md  sshboard-trayicon.c  sshdrop-trayicon.c
integration/qr/: qr.c  qr.cc
obsolete/client/: netdrop-client
obsolete/server/: netdrop-server
server/: netdrop-server  server.pl
